# minishell

./: .gitignore  LICENSE  Makefile  README.md  ignore_readline.supp
inc/: built_ins.h  minishell.h  parser.h
lib/libft/: Makefile  ft_2d_realloc.c  ft_2d_strdup.c  ft_2d_strlen.c  ft_2d_strprintf.c  ft_2dstr_realloc.c  ft_arr2d_free.c  ft_isspace.c  ft_realloc.c  libft.h
misc/: ignore_readline.supp  minishell_map.mmd  syntaxtree.mmd
src/: built_ins.c  execute.c  main.c  parse.c  pipe.c
src/builtins/: built_ins.h  built_ins_envset.c  built_ins_export.c  built_ins_rest.c  built_ins_unset.c  env_utils.c  test.c
src/exec/: cleanup.c  cmd_validation.c  exec_utils.c  execute.c  heredoc.c  pipe.c  redirect.c  redirect_utils.c
src/parser/: AST_parser.c  AST_utils.c  lexer.c  parse.c  parser_utils.c  tokenizer_utils.c
src/signals/: reset_signals.c  set_child_signals.c  set_signals.c  signals_handling.c
tests/unit_tests/: AST_tests.cpp  CMakeLists.txt  strtok_test.cpp  tokenizer_tests.cpp
tests/unit_tests/test_cases/: exec.txt  redir_basic.txt
